2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c: (gst_flac_dec_loop),
	(gst_flac_dec_handle_seek_event):
	  Add support for segment seeks (fixes #338290). Also demote
	  some recurring debug message from DEBUG to LOG level.

2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream),
	(gst_matroskademux_do_index_seek),
	(gst_matroska_demux_handle_seek_event),
	(gst_matroska_demux_parse_blockgroup_or_simpleblock):
	* gst/matroska/matroska-ids.h:
	  Set DISCONT flag on first buffer after a discontinuity.
	  Fix newsegment events sent when seeking and honour KEY_UNIT
	  seek flag. Create pad with bogus caps if we don't recognise
	  the stream codec id.

	* gst/matroska/matroska-demux.h:
	  Fix GObject macros.

2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Mark Nauwelaerts  <manauw at skynet dot be>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_handle_seek_event), (gst_matroska_demux_loop):
	  Handle end of segment properly when set; don't dead-lock when
	  posting start of segment message when doing a segment seek.
	  Fixes #338810.

2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_audio_caps),
	(gst_matroska_demux_plugin_init):
	  Make mpeg2 aac audio work: create artificial private codec data
	  chunk which faad2 seems to require, just as we do for mpeg4 aac.
	  Also call gst_riff_init(). Partially fixes #338767.

2006-04-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_base_init),
	(gst_wavenc_class_init), (gst_wavenc_init),
	(gst_wavenc_create_header_buf), (gst_wavenc_push_header),
	(gst_wavenc_sink_setcaps), (get_id_from_name), (gst_wavenc_event),
	(gst_wavenc_chain), (gst_wavenc_change_state):
	* gst/wavenc/gstwavenc.h:
	  Set caps on first outgoing buffer, so that it doesn't error out